# axon

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  MEMORY.md  README.md  RUBRIC.md  SECURITY.md  llms.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  pr-score.yml  release.yml
acp/: Cargo.toml  SPEC-v0.2.md  SPEC.md
acp/src/: crypto.rs  discovery.rs  main.rs  protocol.rs  socket.rs  transport.rs
axon/: Cargo.toml  Makefile
axon/benches/: ipc_bench.rs  message_bench.rs  peer_table_bench.rs  replay_cache_bench.rs
axon/fuzz/: Cargo.toml
axon/fuzz/fuzz_targets/: fuzz_config_toml.rs  fuzz_config_yaml.rs  fuzz_envelope_decode.rs  fuzz_envelope_roundtrip.rs  fuzz_ipc_command.rs  fuzz_ipc_session.rs  fuzz_known_peers.rs  fuzz_wire_decode.rs
axon/proptest-regressions/message/: kind_tests.txt
axon/src/: cli_examples.rs  config.rs  config_tests.rs  daemon.rs  discovery.rs  discovery_tests.rs  doctor.rs  identity.rs  identity_tests.rs  ipc.rs  lib.rs  main.rs  main_tests.rs  message.rs  peer.rs  peer_table.rs  peer_table_tests.rs  peer_token.rs  transport.rs
axon/src/app/: AGENTS.md  examples.rs  mod.rs  run.rs  run_tests.rs
axon/src/app/cli/: config_cmd.rs  format.rs  format_tests.rs  identity_output.rs  ipc_client_tests.rs  mod.rs  notify_payload_tests.rs
axon/src/app/doctor/: identity_check.rs  mod.rs
axon/src/app/doctor/checks/: config.rs  daemon_artifacts.rs  known_peers.rs  mod.rs  state_root.rs
axon/src/cli/: config_cmd.rs  config_cmd_tests.rs  format.rs  ipc_client.rs  ipc_client_tests.rs  notify_payload.rs
axon/src/config/: AGENTS.md  mod.rs  tests.rs
axon/src/daemon/: AGENTS.md  command_handler.rs  lockfile.rs  lockfile_tests.rs  mod.rs  mod_tests.rs  peer_events.rs  peer_events_tests.rs  reconnect.rs  reconnect_tests.rs  replay_cache.rs  replay_cache_tests.rs  token.rs
axon/src/discovery/: AGENTS.md  mod.rs  tests.rs
axon/src/doctor/: checks.rs  identity_check.rs
axon/src/doctor/checks/: config.rs  daemon_artifacts.rs  known_peers.rs  state_root.rs
axon/src/identity/: AGENTS.md  mod.rs  tests.rs
axon/src/ipc/: AGENTS.md  auth.rs  auth_tests.rs  backend.rs  client_handler.rs  handlers.rs  mod.rs  protocol.rs  protocol_tests.rs  receive_buffer.rs  receive_buffer_tests.rs  server.rs  server_tests.rs
axon/src/ipc/handlers/: broadcast.rs  commands.rs  dispatch.rs  hello_auth.rs  mod.rs
axon/src/ipc/protocol_tests/: mod.rs  proptest_tests.rs  v2.rs
axon/src/ipc/server_tests/: auth.rs  buffer.rs  mod.rs  subscribe.rs  v1_compat.rs
axon/src/ipc/server_tests/auth/: mod.rs  token.rs
axon/src/message/: AGENTS.md  envelope.rs  envelope_tests.rs  kind.rs  kind_tests.rs  mod.rs  payloads.rs  payloads_tests.rs  wire.rs  wire_tests.rs
axon/src/peer_table/: AGENTS.md  mod.rs
axon/src/peer_table/tests/: basic.rs  eviction.rs  mod.rs  proptest.rs
axon/src/peer_token/: AGENTS.md  mod.rs  tests.rs
axon/src/transport/: AGENTS.md  connection.rs  connection_tests.rs  framing.rs  handshake.rs  handshake_tests.rs  mod.rs  mod_tests.rs  quic_transport.rs  quic_transport_tests.rs  tls.rs  tls_tests.rs
axon/src/transport/quic_transport_tests/: basic.rs  connection_lifecycle.rs  fixtures.rs  mod.rs  requests.rs
axon/tests/: adversarial.rs  cli_contract.rs  cli_contract_config.rs  daemon_lifecycle.rs  doctor_contract.rs  integration.rs  ipc_v1_negotiated.rs  ipc_v2_auth_reqid.rs  spec_compliance.rs  wire_compatibility.rs
axon/tests/adversarial/: ipc.rs  ipc_framing.rs  peer_table.rs  validation.rs
axon/tests/cli_contract/: identity_migration.rs
axon/tests/daemon_e2e/: broadcast.rs  connection.rs  ipc_v2.rs  main.rs
axon/tests/daemon_e2e/ipc_v2/: inbox_ack.rs  mod.rs  subscribe.rs
axon/tests/daemon_lifecycle/: basic.rs  messaging.rs
axon/tests/integration/: discovery.rs  identity.rs  ipc.rs  transport.rs  violations.rs
axon/tests/integration/violations/: connection.rs  mod.rs
axon/tests/spec_compliance/: cli_help.rs  envelope.rs  ipc_v2.rs  payloads.rs  stream_mapping.rs  wire_format.rs
axon/tests/spec_compliance/ipc_v2/: error_codes.rs  inbox_ack.rs  mod.rs  subscribe.rs
axon/tests/spec_compliance/wire_format/: ipc_shapes.rs  ipc_v2_shapes.rs  mod.rs  violations.rs
docs/: IPC_V2.md  agent-index.json  architecture-glm5-v2.md  architecture-review-glm5.md  architecture.md  decision-log.md  message-types-draft-v2.md  message-types-draft.md  open-questions.md
evaluations/: 2026-02-17-alignment-evaluation.md  2026-02-17-documentation-evaluation.md  2026-02-17-quality-evaluation.md  agent-amp.md  agent-claude.md  agent-codex.md  agent-gemini.md  evaluation-amp.md  kit-pr1-score-v2.md  kit-pr1-score-v3.md  kit-pr1-score.md  rubric.md
plans/: llm-friendliness-remediation.md
prompts/: api-contract-review.md  assumption-audit.md  steelman-challenge.md
rubrics/: AGENT-READABILITY.md  ALIGNMENT.md  DOCUMENTATION.md  EVALUATION-PRINCIPLES.md  QUALITY.md  README.md
spec/: IPC.md  MESSAGE_TYPES.md  SPEC.md  WIRE_FORMAT.md  message-types.md  spec.md  wire-protocol.md
