[package]
name = "acp"
version = "0.1.0"
edition = "2021"
description = "Agent Communication Protocol — LLM-first local messaging daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
mdns-sd = "0.11"
x25519-dalek = { version = "2", features = ["static_secrets"] }
chacha20poly1305 = "0.10"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
base64 = "0.22"
hkdf = "0.12"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
