[package]
name = "axon"
version = "0.1.0"
edition = "2024"
description = "AXON — Agent eXchange Over Network, LLM-first local messaging daemon"

[dependencies]
tokio = { version = "1", features = ["full"] }
quinn = "0.10"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rcgen = "0.11"
ed25519-dalek = "2"
mdns-sd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
