[package]
name = "axon"
version = "0.7.1"
edition = "2024"
description = "AXON — Agent eXchange Over Network, LLM-first local messaging daemon"
license = "MIT"
repository = "https://github.com/hwbehrens/axon"
keywords = ["agent", "messaging", "quic", "ipc", "p2p"]
categories = ["network-programming", "command-line-utilities"]

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["rt"] }
quinn = "0.11"
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
ed25519-dalek = { version = "2", features = ["rand_core"] }
mdns-sd = "0.11"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["raw_value"] }
serde_yaml = "0.9"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
base64 = "0.22"
uuid = { version = "1", features = ["v4", "serde"] }
anyhow = "1"
x509-parser = "0.16"
getrandom = "0.2"
libc = "0.2" # Required for Unix peer credentials (Linux SO_PEERCRED, macOS getpeereid) — no std-only API
clap_complete = { version = "4", optional = true }
clap_mangen = { version = "0.2", optional = true }

[features]
generate-docs = ["dep:clap_complete", "dep:clap_mangen"]

[dev-dependencies]
tempfile = "3"
proptest = "1"
tokio = { version = "1", features = ["test-util"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "message_bench"
harness = false

[[bench]]
name = "peer_table_bench"
harness = false

[[bench]]
name = "ipc_bench"
harness = false
