[package]
name = "axon-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
quinn-proto = { version = "0.10", features = ["arbitrary"] }
axon = { path = ".." }
serde_json = "1"
tokio = { version = "1", features = ["rt", "io-util", "net", "macros"] }
toml = "0.8"

[[bin]]
name = "fuzz_envelope_decode"
path = "fuzz_targets/fuzz_envelope_decode.rs"
doc = false

[[bin]]
name = "fuzz_wire_decode"
path = "fuzz_targets/fuzz_wire_decode.rs"
doc = false

[[bin]]
name = "fuzz_ipc_command"
path = "fuzz_targets/fuzz_ipc_command.rs"
doc = false

[[bin]]
name = "fuzz_config_toml"
path = "fuzz_targets/fuzz_config_toml.rs"
doc = false

[[bin]]
name = "fuzz_known_peers"
path = "fuzz_targets/fuzz_known_peers.rs"
doc = false

[[bin]]
name = "fuzz_envelope_roundtrip"
path = "fuzz_targets/fuzz_envelope_roundtrip.rs"
doc = false

[[bin]]
name = "fuzz_ipc_session"
path = "fuzz_targets/fuzz_ipc_session.rs"
doc = false
